--- a/client/src/components/SearchBox.astro
+++ b/client/src/components/SearchBox.astro
@@ -7,3 +7,21 @@
     <button type="submit" id="search-box-button"><span class="material-symbols-rounded">search</span></button>
   </form>
 </search>
+<style>
+  .search-box {
+    display: flex;
+    justify-content: center;
+    gap: 4px;
+  }
+
+    /* アイコンの設定 */
+  .material-symbols-rounded {
+    font-variation-settings:
+      "FILL" 0,
+      "wght" 400,
+      "GRAD" 0,
+      "opsz" 24;
+    vertical-align: middle;
+    font-size: 20px;
+  }
+</style>
