--- a/client/src/layouts/MainLayout.astro
+++ b/client/src/layouts/MainLayout.astro
@@ -37,7 +37,7 @@ const { title } = Astro.props;
           <ul>
             <li>
               <div class="search">
-              <SearchBox />
+                <SearchBox />
               </div>
             </li>
             <li><a href="/upload"><span class="material-symbols-rounded">upload</span>アップロード</a></li>
@@ -53,6 +53,10 @@ const { title } = Astro.props;
 </html>
 
 <style>
+  html {
+    scrollbar-gutter: stable both-side;
+  }
+
   body {
     font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
     background-color: #f5f5f5;
